--- a/home/index.html
+++ b/home/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <link rel="stylesheet" href="../assets/css/global.css">
+    <link rel="stylesheet" href="../assets/css/loader.css">
+    <title>Home - Sant Longowal Institute of Engineering & Technology, Longowal</title>
 </head>
 <body>
+    <div class="loader">
+        <img src="../assets/images/logo.png" alt="logo" class="logo">
+        <h1 class="title">Sant Longowal Institute of Engineering & Technology, Longowal</h1>
+        <div class="bar-loader">
+            <div class="bar"></div>
+        </div>
+    </div>
+
+    <div class="content" id="content" style="display: none;">
+
+    </div>
     
+    <script src="../assets/js/global.js"></script>
 </body>
 </html>
