some changes home page

--- a/home/index.html
+++ b/home/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="content" id="content" style="display: none;">
-
+        <h1>Main Content - Website</h1>
     </div>
     
     <script src="../assets/js/global.js"></script>
