--- a/home/index.html
+++ b/home/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/css/global.css">
-    <link rel="stylesheet" href="../assets/css/loader.css">
-    <title>Home - Sant Longowal Institute of Engineering & Technology, Longowal</title>
-</head>
-<body>
-    <div class="loader">
-        <img src="../assets/images/logo.png" alt="logo" class="logo">
-        <h1 class="title">Sant Longowal Institute of Engineering & Technology, Longowal</h1>
-        <div class="bar-loader">
-            <div class="bar"></div>
-        </div>
-    </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SLIET Mentorship Platform</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="container">
+        <div class="logo">SLIET Mentorship</div>
+        <ul class="nav-links">
+          <li><a href="#features">Features</a></li>
+          <li><a href="#mentors">Mentors</a></li>
+          <li><a href="#how-it-works">How It Works</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+        </ul>
+        <div class="mobile-menu">☰</div>
+      </nav>
+    </header>
 
-    <div class="content" id="content" style="display: none;">
-        <h1>Main Content - Website</h1>
-    </div>
-    
-    <script src="../assets/js/global.js"></script>
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
