add hero section

--- a/home/index.html
+++ b/home/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <!-- Header - Nav Bar -->
     <header>
       <nav class="container">
         <div class="logo">SLIET Mentorship</div>
@@ -23,6 +24,19 @@
         <div class="mobile-menu">☰</div>
       </nav>
     </header>
+    <main>
+      <!-- Hero Section -->
+      <section class="hero">
+        <div class="hero-content">
+          <h1>Empowering Students Through Mentorship</h1>
+          <p>Connect with Faculty Mentors for Academic and Career Guidance</p>
+          <a href="#" class="btn btn-primary">Find a Mentor</a>
+          <a href="#" class="btn btn-secondary">Become a Mentor</a>
+        </div>
+      </section>
+
+      
+    </main>
 
     <script src="app.js"></script>
   </body>
