add features section

--- a/home/index.html
+++ b/home/index.html
@@ -34,8 +34,38 @@
           <a href="#" class="btn btn-secondary">Become a Mentor</a>
         </div>
       </section>
-
-      
+      <!-- Features Section -->
+      <section id="features" class="features">
+        <div class="container">
+          <h2>Platform Features</h2>
+          <div class="features-grid">
+            <div class="feature">
+              <i>📅</i>
+              <h3>Automated Booking System</h3>
+              <p>
+                Book one-on-one sessions with ease, directly from your mentor's
+                available time slots.
+              </p>
+            </div>
+            <div class="feature">
+              <i>👤</i>
+              <h3>Personalized Mentorship</h3>
+              <p>
+                Receive tailored academic and career guidance from faculty
+                mentors.
+              </p>
+            </div>
+            <div class="feature">
+              <i>💬</i>
+              <h3>Simple Communication</h3>
+              <p>
+                Easily communicate with your mentor and stay updated with
+                session reminders.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="app.js"></script>
