--- a/home/index.html
+++ b/home/index.html
@@ -3,15 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SLIET Mentorship Platform</title>
+    <title>Home - SLIET Mentorship Platform</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../assets/css/global.css">
+    <link rel="stylesheet" href="../assets/css/loader.css">
   </head>
   <body>
-    <!-- Header - Nav Bar -->
+
+    <div class="loader">
+        <img src="../assets/images/logo.png" alt="logo" class="logo">
+        <h1 class="title">Sant Longowal Institute of Engineering & Technology, Longowal</h1>
+        <div class="bar-loader">
+            <div class="bar"></div>
+        </div>
+    </div>
+   
     <header>
       <nav class="container">
         <div class="logo">SLIET Mentorship</div>
@@ -25,7 +35,7 @@
       </nav>
     </header>
     <main>
-      <!-- Hero Section -->
+  
       <section class="hero">
         <div class="hero-content">
           <h1>Empowering Students Through Mentorship</h1>
@@ -34,7 +44,7 @@
           <a href="#" class="btn btn-secondary">Become a Mentor</a>
         </div>
       </section>
-      <!-- Features Section -->
+ 
       <section id="features" class="features">
         <div class="container">
           <h2>Platform Features</h2>
@@ -69,5 +79,6 @@
     </main>
 
     <script src="app.js"></script>
+    <script src="../assets/js/global.js"></script>
   </body>
 </html>
