--- a/auth/login.html
+++ b/auth/login.html
@@ -25,6 +25,18 @@
           <p>Don't have an account? <a href="#" id="signupLink">Sign up</a></p>
         </div>
         <form id="loginForm" class="login-form">
+          <div class="remember-forgot">
+            <label class="student">
+              <input type="checkbox" id="rememberMe" />
+              <span class="checkmark"></span>
+              Student
+            </label>
+            <label class="teacher">
+              <input type="checkbox" id="rememberMe" />
+              <span class="checkmark"></span>
+              Teacher
+            </label>
+          </div>
           <div class="input-group">
             <label for="email">Email</label>
             <input type="email" id="email" name="email" required />
