--- a/home/index.html
+++ b/home/index.html
@@ -9,19 +9,20 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="../assets/css/global.css">
-    <link rel="stylesheet" href="../assets/css/loader.css">
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/loader.css" />
   </head>
   <body>
-
     <div class="loader">
-        <img src="../assets/images/logo.png" alt="logo" class="logo">
-        <h1 class="title">Sant Longowal Institute of Engineering & Technology, Longowal</h1>
-        <div class="bar-loader">
-            <div class="bar"></div>
-        </div>
+      <img src="../assets/images/logo.png" alt="logo" class="logo" />
+      <h1 class="title">
+        Sant Longowal Institute of Engineering & Technology, Longowal
+      </h1>
+      <div class="bar-loader">
+        <div class="bar"></div>
+      </div>
     </div>
-   
+
     <header>
       <nav class="container">
         <div class="logo">SLIET Mentorship</div>
@@ -34,9 +35,8 @@
         <div class="mobile-menu">☰</div>
       </nav>
     </header>
-    
+
     <main>
-  
       <section class="hero">
         <div class="hero-content">
           <h1>Empowering Students Through Mentorship</h1>
@@ -45,7 +45,7 @@
           <a href="#" class="btn btn-secondary">Become a Mentor</a>
         </div>
       </section>
- 
+
       <section id="features" class="features">
         <div class="container">
           <h2>Platform Features</h2>
@@ -75,6 +75,84 @@
               </p>
             </div>
           </div>
+        </div>
+      </section>
+      <section id="mentors" class="mentors">
+        <div class="container">
+          <h2>Meet Our Mentors</h2>
+          <div class="mentor-carousel">
+            <div class="mentor-slide">
+              <div class="mentor-card">
+                <img
+                  src="https://source.unsplash.com/random/150x150/?professor"
+                  alt="Mentor 1"
+                />
+                <h3>Dr. Jane Smith</h3>
+                <p>Computer Science</p>
+                <a href="#" class="btn btn-primary">View Profile</a>
+              </div>
+            </div>
+            <div class="mentor-slide">
+              <div class="mentor-card">
+                <img
+                  src="https://source.unsplash.com/random/150x150/?teacher"
+                  alt="Mentor 2"
+                />
+                <h3>Prof. John Doe</h3>
+                <p>Artificial Intelligence</p>
+                <a href="#" class="btn btn-primary">View Profile</a>
+              </div>
+            </div>
+            <div class="mentor-slide">
+              <div class="mentor-card">
+                <img
+                  src="https://source.unsplash.com/random/150x150/?scientist"
+                  alt="Mentor 3"
+                />
+                <h3>Dr. Emily Brown</h3>
+                <p>Data Science</p>
+                <a href="#" class="btn btn-primary">View Profile</a>
+              </div>
+            </div>
+            <button class="carousel-btn prev">&#10094;</button>
+            <button class="carousel-btn next">&#10095;</button>
+          </div>
+        </div>
+      </section>
+      <section id="testimonials" class="testimonials">
+        <div class="container">
+          <h2>What Students Say</h2>
+          <div class="testimonial-carousel">
+            <div class="testimonial active">
+              <p>
+                "The mentorship program has been invaluable for my academic
+                growth. My mentor's guidance helped me excel in my studies."
+              </p>
+              <p><strong>- Sarah J., Computer Science</strong></p>
+            </div>
+            <div class="testimonial">
+              <p>
+                "I gained crucial insights into my career path through my
+                mentor's industry experience. It's been a game-changer for me."
+              </p>
+              <p><strong>- Mike T., Data Science</strong></p>
+            </div>
+            <div class="testimonial">
+              <p>
+                "The platform made it easy to connect with a mentor who
+                understood my goals. I'm grateful for this opportunity."
+              </p>
+              <p><strong>- Lisa R., Artificial Intelligence</strong></p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="cta">
+        <div class="container">
+          <h2>Ready to Take Your Academic Journey to the Next Level?</h2>
+          <a href="#" class="btn btn-secondary">Find Your Mentor Today</a>
+          <p>Connect with a mentor and start building your future.</p>
         </div>
       </section>
     </main>
