some changes community page

--- a/community/index.html
+++ b/community/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <aside class="sidebar">
         <div class="sidebar-header">
-          MentorConnect
+          SLIET Mentorship
           <button
             id="themeToggle"
             class="control-btn"
