some auth page changes

--- a/auth/login.html
+++ b/auth/login.html
@@ -27,12 +27,12 @@
         <form id="loginForm" class="login-form">
           <div class="remember-forgot">
             <label class="student">
-              <input type="checkbox" id="rememberMe" />
+              <input type="checkbox" id="student" />
               <span class="checkmark"></span>
               Student
             </label>
             <label class="teacher">
-              <input type="checkbox" id="rememberMe" />
+              <input type="checkbox" id="teacher" />
               <span class="checkmark"></span>
               Teacher
             </label>
