--- a/auth/signup.html
+++ b/auth/signup.html
@@ -24,15 +24,15 @@
           <h1>Create Your Account</h1>
           <p>Already have an account? <a href="#" id="signupLink">Login</a></p>
         </div>
-        <form id="loginForm" class="login-form">
+        <form id="signupForm" class="login-form">
           <div class="remember-forgot">
             <label class="student">
-              <input type="checkbox" id="rememberMe" />
+              <input type="checkbox" id="student" />
               <span class="checkmark"></span>
               Student
             </label>
             <label class="teacher">
-              <input type="checkbox" id="rememberMe" />
+              <input type="checkbox" id="teacher" />
               <span class="checkmark"></span>
               Teacher
             </label>
