add footer design

--- a/home/index.html
+++ b/home/index.html
@@ -157,6 +157,18 @@
       </section>
     </main>
 
+    <footer>
+      <div class="container">
+        <ul class="footer-links">
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">FAQs</a></li>
+        </ul>
+        <p>&copy; 2024 SLIET Mentorship Platform. All rights reserved.</p>
+      </div>
+    </footer>
+
     <script src="app.js"></script>
     <script src="../assets/js/global.js"></script>
   </body>
