add the login sign up navbar

--- a/faculty/index.html
+++ b/faculty/index.html
@@ -24,10 +24,15 @@
                       </a>
                   </div>
                   <div class="right-content">
+                    <div class ="quick-link-one">
                       <a href="#" class="quick-link">Quick Links</a>
                       <a href="#" class="quick-link">Overview</a>
                       <a href="#" class="quick-link">Help</a>
-                      <a href="#" class="locate-us">Locate us</a>
+                    </div>
+                  <div class ="quick-link-two">
+                    <a href="#" class="locate-us">Signup</a>
+                    <a href="#" class="locate-us">Signin</a>
+                  </div>
                   </div>
               </div>
           </div>
