some ui bug fix

--- a/home/index.html
+++ b/home/index.html
@@ -60,8 +60,8 @@
                 <a href="#" class="quick-link">Help</a>
               </div>
             <div class ="quick-link-two">
-              <a href="#" class="locate-us">Signup</a>
-              <a href="#" class="locate-us">Signin</a>
+              <a href="/auth/signup.html" class="locate-us">Signup</a>
+              <a href="/auth/login.html" class="locate-us">Signin</a>
             </div>
             </div>
           </div>
