--- a/home/index.html
+++ b/home/index.html
@@ -288,7 +288,7 @@
     <div class="chat-container">
       <div class="chat-header">
         <img
-          src="https://source.unsplash.com/random/40x40?avatar"
+          src="https://img.freepik.com/free-vector/graident-ai-robot-vectorart_78370-4114.jpg"
           alt="Chatbot Avatar"
           class="avatar"
         />
