--- a/create-appointment/index.html
+++ b/create-appointment/index.html
@@ -9,9 +9,140 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../assets/css/global.css">
   </head>
   <body>
-    <div class="container">
+
+    <header>
+      <div class="top-bar">
+        <div class="container">
+          <div class="top-bar-content">
+            <div class="left-content">
+              <select class="language-select">
+                <option>Select Language</option>
+                <option>English</option>
+                <option>ಕನ್ನಡ</option>
+              </select>
+              <a href="tel:+919901773645" class="phone-link">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="phone-icon"
+                >
+                  <path
+                    d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"
+                  ></path>
+                </svg>
+                +91 9901773645
+              </a>
+            </div>
+            <div class="right-content">
+              <div class ="quick-link-one">
+                <a href="#" class="quick-link">Quick Links</a>
+                <a href="#" class="quick-link">Overview</a>
+                <a href="#" class="quick-link">Help</a>
+              </div>
+            <div class ="quick-link-two">
+              <a href="/auth/signup.html" class="locate-us">Signup</a>
+              <a href="/auth/login.html" class="locate-us">Signin</a>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="middle-bar">
+        <div class="container">
+          <div class="logo-section">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/en/5/52/Sant_Longowal_Institute_of_Engineering_and_Technology_Logo.png"
+              alt="Logo"
+              class="logohome"
+            />
+            <div class="college-name">
+              <p class="college-name-kannada">
+                ਸੰਤ ਲੌਂਗੋਵਾਲ ਇੰਸਟੀਚਿਊਟ ਆਫ ਇੰਜੀਨੀਅਰਿੰਗ ਐਂਡ ਟੈਕਨਾਲੋਜੀ
+              </p>
+              <p class="college-name-english">
+                Sant Longowal Institute of Engineering and Technology
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <nav class="main-nav">
+        <div class="container">
+          <button class="mobile-menu-toggle" aria-label="Toggle menu">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="menu-icon"
+            >
+              <line x1="3" y1="12" x2="21" y2="12"></line>
+              <line x1="3" y1="6" x2="21" y2="6"></line>
+              <line x1="3" y1="18" x2="21" y2="18"></line>
+            </svg>
+          </button>
+          <ul class="nav-list">
+            <li><a href="#">Home</a></li>
+            <li class="has-dropdown">
+              <a href="#">About <span class="dropdown-arrow">▼</span></a>
+              <ul class="dropdown">
+                <li><a href="#">Submenu 1</a></li>
+                <li><a href="#">Submenu 2</a></li>
+              </ul>
+            </li>
+            <li class="has-dropdown">
+              <a href="#">Admission <span class="dropdown-arrow">▼</span></a>
+              <ul class="dropdown">
+                <li><a href="#">Submenu 1</a></li>
+                <li><a href="#">Submenu 2</a></li>
+              </ul>
+            </li>
+            <li class="has-dropdown">
+              <a href="#">Academics <span class="dropdown-arrow">▼</span></a>
+              <ul class="dropdown">
+                <li><a href="#">Submenu 1</a></li>
+                <li><a href="#">Submenu 2</a></li>
+              </ul>
+            </li>
+            <li class="has-dropdown">
+              <a href="#">Department <span class="dropdown-arrow">▼</span></a>
+              <ul class="dropdown">
+                <li><a href="#">Submenu 1</a></li>
+                <li><a href="#">Submenu 2</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Facilities</a></li>
+            <li class="has-dropdown">
+              <a href="#">Gallery <span class="dropdown-arrow">▼</span></a>
+              <ul class="dropdown">
+                <li><a href="#">Submenu 1</a></li>
+                <li><a href="#">Submenu 2</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Contact us</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <div class="appointment_container">
       <div class="background-shape shape-1"></div>
       <div class="background-shape shape-2"></div>
       <header class="header">
