--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="../assets/css/global.css" />
-    <link rel="stylesheet" href="../assets/css/loader.css" />
+    <link rel="stylesheet" href="./home/styles.css" />
+    <link rel="stylesheet" href="./assets/css/global.css" />
+    <link rel="stylesheet" href="./assets/css/loader.css" />
   </head>
   <body>
     <div class="loader">
@@ -313,7 +313,7 @@
     </div>
     <button id="openChat" class="open-chat-btn">Chat with SLIET bot</button>
 
-    <script src="app.js"></script>
-    <script src="../assets/js/global.js"></script>
+    <script src="./home/app.js"></script>
+    <script src="./assets/js/global.js"></script>
   </body>
 </html>
