--- a/contact/index.html
+++ b/contact/index.html
@@ -154,18 +154,6 @@
     </div>
 
     <div class="contact-section">
-      <!-- <iframe
-        src="https://www.google.com/maps/embed/v1/place?q=5HF5+++FMP,+Unnamed+Road,+Rajanukunte,+Bangalore,+Karnataka+560064&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"
-        width="600"
-        height="450"
-        frameborder="0"
-        style="border: 0"
-        allowfullscreen=""
-        aria-hidden="false"
-        tabindex="0"
-        title="map"
-      ></iframe> -->
-
       <iframe
         width="600"
         height="450"
@@ -187,9 +175,9 @@
             <i class="fas fa-location-dot fa-2xl"></i>
             <div>
               <h3>Reach Us</h3>
-              <p>5HF5 + FMP, Main Road,</p>
-              <p>Rajanukunte, Bangalore,</p>
-              <p>Karnataka 560064</p>
+              <p>Longowal - 148106, Distt.</p>
+              <p>Sangrur (Pb.),</p>
+              <p>India</p>
             </div>
           </div>
           <div>
