adding the links to the navbar

--- a/index.html
+++ b/index.html
@@ -110,43 +110,21 @@
           </button>
           <ul class="nav-list">
             <li><a href="#">Home</a></li>
+
             <li class="has-dropdown">
-              <a href="#">About <span class="dropdown-arrow">▼</span></a>
-              <ul class="dropdown">
-                <li><a href="#">Submenu 1</a></li>
-                <li><a href="#">Submenu 2</a></li>
-              </ul>
+              <a href="/about">About </a>
+            </li>
+
+            <li><a href="/faculty">Faculty</a></li>
+
+            <li class="has-dropdown">
+              <a href="/appointments-list"> Appointments-list </a>
             </li>
             <li class="has-dropdown">
-              <a href="#">Admission <span class="dropdown-arrow">▼</span></a>
-              <ul class="dropdown">
-                <li><a href="#">Submenu 1</a></li>
-                <li><a href="#">Submenu 2</a></li>
-              </ul>
+              <a href="/mentors"> Mentor </a>
             </li>
-            <li class="has-dropdown">
-              <a href="#">Academics <span class="dropdown-arrow">▼</span></a>
-              <ul class="dropdown">
-                <li><a href="#">Submenu 1</a></li>
-                <li><a href="#">Submenu 2</a></li>
-              </ul>
-            </li>
-            <li class="has-dropdown">
-              <a href="#">Department <span class="dropdown-arrow">▼</span></a>
-              <ul class="dropdown">
-                <li><a href="#">Submenu 1</a></li>
-                <li><a href="#">Submenu 2</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Facilities</a></li>
-            <li class="has-dropdown">
-              <a href="#">Gallery <span class="dropdown-arrow">▼</span></a>
-              <ul class="dropdown">
-                <li><a href="#">Submenu 1</a></li>
-                <li><a href="#">Submenu 2</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Contact us</a></li>
+
+            <li><a href="/contact">Contact us</a></li>
           </ul>
         </div>
       </nav>
