adding mentor link

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <a href="/appointments-list"> Appointments-list </a>
             </li>
             <li class="has-dropdown">
-              <a href="/mentors"> Mentor </a>
+              <a href="/Mentor"> Mentor </a>
             </li>
 
             <li><a href="/contact">Contact us</a></li>
