--- a/appointments-list/index.html
+++ b/appointments-list/index.html
@@ -112,7 +112,7 @@
               <a href="/appointments-list"> Appointments-list </a>
             </li>
             <li class="has-dropdown">
-              <a href="/mentors"> Mentor </a>
+              <a href="/Mentor"> Mentor </a>
             </li>
 
             <li><a href="/contact">Contact us</a></li>
