some routes linking

--- a/Mentor/index.html
+++ b/Mentor/index.html
@@ -8,11 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="../assets/css/global.css">
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
   </head>
   <body>
-
     <header>
       <div class="top-bar">
         <div class="container">
@@ -44,15 +43,15 @@
               </a>
             </div>
             <div class="right-content">
-              <div class ="quick-link-one">
+              <div class="quick-link-one">
                 <a href="#" class="quick-link">Quick Links</a>
                 <a href="#" class="quick-link">Overview</a>
                 <a href="#" class="quick-link">Help</a>
               </div>
-            <div class ="quick-link-two">
-              <a href="/auth/signup.html" class="locate-us">Signup</a>
-              <a href="/auth/login.html" class="locate-us">Signin</a>
-            </div>
+              <div class="quick-link-two">
+                <a href="/auth/signup.html" class="locate-us">Signup</a>
+                <a href="/auth/login.html" class="locate-us">Signin</a>
+              </div>
             </div>
           </div>
         </div>
