navbar change mentor page

--- a/Mentor/index.html
+++ b/Mentor/index.html
@@ -99,7 +99,7 @@
             </svg>
           </button>
           <ul class="nav-list">
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
 
             <li class="has-dropdown">
               <a href="/about">About </a>
@@ -108,10 +108,17 @@
             <li><a href="/faculty">Faculty</a></li>
 
             <li class="has-dropdown">
+              <a href="/appointments-list">Create-Appointments </a>
+            </li>
+
+
+            <li class="has-dropdown">
               <a href="/appointments-list"> Appointments-list </a>
             </li>
+
+        
             <li class="has-dropdown">
-              <a href="/mentors"> Mentor </a>
+              <a href="/mentor"> Mentor </a>
             </li>
 
             <li><a href="/contact">Contact us</a></li>
