--- a/about/index.html
+++ b/about/index.html
@@ -58,45 +58,42 @@
 
       <div class="middle-bar">
         <div class="container">
-<<<<<<< HEAD
-          <div class="logo-section">
-            <img
-              src="https://upload.wikimedia.org/wikipedia/en/5/52/Sant_Longowal_Institute_of_Engineering_and_Technology_Logo.png"
-              alt="Logo"
-              class="logohome"
-            />
-            <div class="college-name">
-              <p class="college-name-kannada">
-                ਸੰਤ ਲੌਂਗੋਵਾਲ ਇੰਸਟੀਚਿਊਟ ਆਫ ਇੰਜੀਨੀਅਰਿੰਗ ਐਂਡ ਟੈਕਨਾਲੋਜੀ
-              </p>
-              <p class="college-name-english">
-                Sant Longowal Institute of Engineering and Technology
-              </p>
-            </div>
-          </div>
-=======
-            <button class="mobile-menu-toggle" aria-label="Toggle menu">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="menu-icon"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
-            </button>
-            <ul class="nav-list">
-              <li><a href="#">Home</a></li>
-  
-              <li class="has-dropdown">
-                <a href="/about">About </a>
-              </li>
-  
-              <li><a href="/faculty">Faculty</a></li>
-  
-              <li class="has-dropdown">
-                <a href="/appointments-list"> Appointments-list </a>
-              </li>
-              <li class="has-dropdown">
-                <a href="/Mentor"> Mentor </a>
-              </li>
-  
-              <li><a href="/contact">Contact us</a></li>
-            </ul>
->>>>>>> 0cbad865fc8d33cdbf6d50c28c51aec51b8a32ef
+          <button class="mobile-menu-toggle" aria-label="Toggle menu">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="menu-icon"
+            >
+              <line x1="3" y1="12" x2="21" y2="12"></line>
+              <line x1="3" y1="6" x2="21" y2="6"></line>
+              <line x1="3" y1="18" x2="21" y2="18"></line>
+            </svg>
+          </button>
+          <ul class="nav-list">
+            <li><a href="#">Home</a></li>
+
+            <li class="has-dropdown">
+              <a href="/about">About </a>
+            </li>
+
+            <li><a href="/faculty">Faculty</a></li>
+
+            <li class="has-dropdown">
+              <a href="/appointments-list"> Appointments-list </a>
+            </li>
+            <li class="has-dropdown">
+              <a href="/Mentor"> Mentor </a>
+            </li>
+
+            <li><a href="/contact">Contact us</a></li>
+          </ul>
         </div>
       </div>
 
