navbar routes fix

--- a/appointments-list/index.html
+++ b/appointments-list/index.html
@@ -100,13 +100,17 @@
             </svg>
           </button>
           <ul class="nav-list">
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
 
             <li class="has-dropdown">
               <a href="/about">About </a>
             </li>
 
             <li><a href="/faculty">Faculty</a></li>
+
+            <li class="has-dropdown">
+              <a href="/create-appointment">Create-Appointments </a>
+            </li>
 
             <li class="has-dropdown">
               <a href="/appointments-list"> Appointments-list </a>
