--- a/Mentor/index.html
+++ b/Mentor/index.html
@@ -107,7 +107,7 @@
             <li><a href="/faculty">Faculty</a></li>
 
             <li class="has-dropdown">
-              <a href="/appointments-list">Create-Appointments </a>
+              <a href="/create-appointment">Create-Appointments </a>
             </li>
 
 
