changes in about page and create-appoint section

--- a/create-appointment/index.html
+++ b/create-appointment/index.html
@@ -114,7 +114,7 @@
               <a href="/appointments-list"> Appointments-list </a>
             </li>
             <li class="has-dropdown">
-              <a href="/Mentor"> Appointments-list </a>
+              <a href="/Mentor"> Mentor </a>
             </li>
 
             <li><a href="/contact">Contact us</a></li>
