about page navabr bug fix

--- a/about/index.html
+++ b/about/index.html
@@ -11,6 +11,7 @@
     />
   </head>
   <body>
+    
     <header>
       <div class="top-bar">
         <div class="container">
@@ -42,21 +43,41 @@
               </a>
             </div>
             <div class="right-content">
-              <div class="quick-link-one">
+              <div class ="quick-link-one">
                 <a href="#" class="quick-link">Quick Links</a>
                 <a href="#" class="quick-link">Overview</a>
                 <a href="#" class="quick-link">Help</a>
               </div>
-              <div class="quick-link-two">
-                <a href="auth/signup.html" class="locate-us">Signup</a>
-                <a href="auth/login.html" class="locate-us">Signin</a>
-              </div>
+            <div class ="quick-link-two">
+              <a href="/auth/signup.html" class="locate-us">Signup</a>
+              <a href="/auth/login.html" class="locate-us">Signin</a>
+            </div>
             </div>
           </div>
         </div>
       </div>
 
       <div class="middle-bar">
+        <div class="container">
+          <div class="logo-section">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/en/5/52/Sant_Longowal_Institute_of_Engineering_and_Technology_Logo.png"
+              alt="Logo"
+              class="logohome"
+            />
+            <div class="college-name">
+              <p class="college-name-kannada">
+                ਸੰਤ ਲੌਂਗੋਵਾਲ ਇੰਸਟੀਚਿਊਟ ਆਫ ਇੰਜੀਨੀਅਰਿੰਗ ਐਂਡ ਟੈਕਨਾਲੋਜੀ
+              </p>
+              <p class="college-name-english">
+                Sant Longowal Institute of Engineering and Technology
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <nav class="main-nav">
         <div class="container">
           <button class="mobile-menu-toggle" aria-label="Toggle menu">
             <svg
@@ -89,6 +110,7 @@
               <a href="/create-appointment">Create-Appointments </a>
             </li>
 
+
             <li class="has-dropdown">
               <a href="/appointments-list"> Appointments-list </a>
             </li>
@@ -99,8 +121,9 @@
             <li><a href="/contact">Contact us</a></li>
           </ul>
         </div>
-      </div>
+      </nav>
     </header>
+
 
     <main>
       <section id="home" class="hero">
