--- a/appointments-list/index.html
+++ b/appointments-list/index.html
@@ -22,7 +22,7 @@
               <select class="language-select">
                 <option>Select Language</option>
                 <option>English</option>
-                <option>ಕನ್ನಡ</option>
+                <option>ਪੰਜਾਬੀ</option>
               </select>
               <a href="tel:+919901773645" class="phone-link">
                 <svg
