--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-    
+
     <header>
       <div class="top-bar">
         <div class="container">
@@ -20,7 +20,7 @@
               <select class="language-select">
                 <option>Select Language</option>
                 <option>English</option>
-                <option>ಕನ್ನಡ</option>
+                <option>ਪੰਜਾਬੀ</option>
               </select>
               <a href="tel:+919901773645" class="phone-link">
                 <svg
