--- a/appointments-list/index.html
+++ b/appointments-list/index.html
@@ -109,6 +109,11 @@
             <li><a href="/faculty">Faculty</a></li>
 
             <li class="has-dropdown">
+              <a href="/community">Communication </a>
+            </li>
+
+
+            <li class="has-dropdown">
               <a href="/create-appointment">Create-Appointments </a>
             </li>
 
