--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
             <li><a href="/faculty">Faculty</a></li>
 
             <li class="has-dropdown">
+              <a href="/community">Communication </a>
+            </li>
+
+            <li class="has-dropdown">
               <a href="/create-appointment">Create-Appointments </a>
             </li>
 
